--- a/branches/2.0/Public/Admin/css/styles.css
+++ b/branches/2.0/Public/Admin/css/styles.css
@@ -73,7 +73,7 @@ ul.navigation li.selected {width: 226px; z-index: 2; position: relative; padding
 
 .headings {padding: 0 20px; border: 1px solid #CACACA; text-shadow: 1px 1px 1px #fff; background: #EAEAEA url(../images/bg_heading.png) repeat-x top;   letter-spacing: -1px; height: 35px;}
 .headings h2 {padding-top: 0px; font-size: 16px;height: 35px; line-height: 35px;font-weight: normal;}
-.contentbox {overflow: auto; border: 1px solid #fff; padding: 15px; background: #fff url(../images/bg_fade_med.png) repeat-x top; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px; -moz-border-radius-bottomright: 10px; -moz-border-radius-bottomleft: 10px;}	
+.contentbox {overflow: auto; border: 1px solid #ccc; padding: 15px; background: #fff url(../images/bg_fade_med.png) repeat-x top;-moz-border-radius-bottomright: 10px; -moz-border-radius-bottomleft: 10px;}	
 .nopad {padding: 0;}
 .contentbox p {padding-bottom: 15px;}
 /*.contentbox a, #notificationsbox a {color: #666;}
@@ -231,7 +231,7 @@ ul.pagination li.page a:hover {background: #00789F url(i../imagesmg/bg_buttons.p
 .list .notes{color:#999;}
 
 /*修改头像*/
-.user .modify {position: relative;left: 3px; top: 52px;font-size: 10px;width: 44px;height: 16px;display: block;}
+.user .modify {position: absolute;left: 18px; top: 61px;font-size: 10px;width: 44px;height: 16px;display: block;}
 .user .mask {z-index: 1;position: absolute;top: 0px;left: 0px;width: 100%;height: 16px;filter: alpha(opacity=62.5);opacity: .625;background: #000;}
 .user .text {position: absolute;left: 0;top: 0px;width: 44px;height: 16px;z-index: 2;line-height: 18px;text-align: center;color: #ffffff;}
 
